# ssh-tcp-reverse-shell-cpp

./: .gitignore  CMakeLists.txt  README.md
c-version-payload/: main.c  payload.c  payload.h  utils.c  utils.h
c2/: C2.cpp  C2.h  C2Server.cpp  C2Server.h  main.cpp  utils.cpp  utils.h
payload/: Payload.cpp  Payload.h  main.cpp  utils.cpp  utils.h
utils/: utils.cpp  utils.h
